[package]
name = "websocket-ton-service"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "WebSocket сервис для мониторинга транзакций в сети TON"
license = "MIT"
repository = "https://github.com/your-username/websocket-ton-service"

[dependencies]
# Асинхронный рантайм
tokio = { version = "1.35", features = ["full"] }

# WebSocket сервер
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# TON библиотеки - исправленные версии
tonlib-client = "0.25"
tonlib-core = "0.25"

# Сериализация
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Логирование
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Утилиты
futures = "0.3"
futures-util = "0.3"
anyhow = "1.0"
thiserror = "1.0"
tokio-stream = "0.1"
dashmap = "5.5"
uuid = { version = "1.6", features = ["v4", "serde"] }
hex = "0.4" # Для преобразования хешей транзакций

# HTTP клиент для получения конфигураций и трейсов
reqwest = { version = "0.11", features = ["json"] }

# Время
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Дополнительные зависимости для тестов
tokio-tungstenite = "0.21"
url = "2.4"

[profile.release]
# Оптимизации для релиза
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
# Настройки для разработки
debug = true
opt-level = 0

[[bin]]
name = "websocket-ton-service"
path = "src/main.rs"

[features]
default = []
# Возможные дополнительные фичи
testnet = []
metrics = []
